added final fixes and styling for presentation

--- a/app/assets/javascripts/templates/incinvite.hbs
+++ b/app/assets/javascripts/templates/incinvite.hbs
@@ -2,9 +2,11 @@
 {{address}}<br>
 {{showdate}}<br>
 {{showtime}}<br>
+
  {{#each users}}
-   			  {{this.name}}<br>
-			{{/each}}
+ {{name}}<br>
+ {{/each}}
+
 <br>
 <br>
 <div class="mapstyle" id="map-canvas-{{id}}"></div>
