--- a/app/views/contacts/addcontact.html.erb
+++ b/app/views/contacts/addcontact.html.erb
@@ -1,4 +1,4 @@
-
+<div class="centered">
 <% if @user.nil? %>
 
   <p>No user found. <a href="/newcontact">Return to search</a></p>
@@ -18,3 +18,4 @@
 <% end%>
 
 
+</div>
