--- a/app/views/invites/contacts.html.erb
+++ b/app/views/invites/contacts.html.erb
@@ -1,3 +1,4 @@
+<div class="centered">
 <h1> Your Contacts </h1>
 
 <% if current_user.users.empty? %>
@@ -18,7 +19,7 @@
 <% end %>
 
 <br>
-
+</div>
 
 
 
