--- a/app/assets/javascripts/templates/incinvites.hbs
+++ b/app/assets/javascripts/templates/incinvites.hbs
@@ -1,10 +1,16 @@
 	<div class="inc_invite" data-id={{id}}>
-		<ul>
-				<li> {{address}}</li>
-				<li> {{showdate}}</li>
-				<li> {{showtime}}</li>
-				
+		
+		<hr>
+		    <div class="datetime"> 
+		    <span>{{showdate}}<br><br>{{showtime}}</span>
+		    </div>
+		    <div class="addressusers">
+		    <span> {{address}}<br><br>
+		     {{#each users}}
+   			 {{this.name}}<br>
+			{{/each}}</span>
+			</div>
 
-		</ul>
+		
 	</div>
 
