--- a/app/assets/javascripts/templates/outinvites.hbs
+++ b/app/assets/javascripts/templates/outinvites.hbs
@@ -1,9 +1,12 @@
 	<div class="out_invite" data-id={{id}}>
-		<ul>
-				<li> {{address}}</li>
-				<li> {{showdate}}</li>
-				<li> {{showtime}}</li>
-				
-
-		</ul>
+		<hr>
+		    <div class="datetime"> 
+		    <span>{{showdate}}<br><br>{{showtime}}</span>
+		    </div>
+		    <div class="addressusers">
+		    <span> {{address}}<br><br>
+		     {{#each users}}
+   			 {{this.name}}<br>
+			{{/each}}</span>
+			</div>
 	</div>
