--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -208,6 +208,12 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
 	font-size:20px;
 }
 
+inc_contact{
+	 clear:both;
+  min-width: 250px;
+  margin: 20px auto;
+  color:#fff;
+}
 
 
 
