fixed up styling and polishing layout. handing it off to noah for the rest

--- a/app/assets/javascripts/templates/meets.hbs
+++ b/app/assets/javascripts/templates/meets.hbs
@@ -1,14 +1,22 @@
 
      	<div class="meet" data-id={{id}}>  
-     	<hr>
 		    <div class="datetime"> 
-		    <span>{{showdate}}<br><br>{{showtime}}</span>
+  		    <span>{{showdate}}<br></span>
+          <span class="time">{{showtime}}</span>
 		    </div>
-		    <div class="addressusers">
-		    <span> {{address}}<br><br>
-		     {{#each users}}
-   			 {{this.name}}<br>
-			{{/each}}</span>
-			</div>
+
+        <div class="users">
+          <span>
+            {{#each users}}
+            {{this.name}}<br>
+            {{/each}}
+          </span>
+        </div>
+
+		    <div class="address">
+  		    <span>
+            {{address}}<br>
+		      </span>
+			  </div>
     	</div>
 
