--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,9 +26,9 @@ src: url(ASansreg.ttf);
 html, body{
   	height:90%;
   	font-family: 'ASansreg', sans-serif;
-  	background-color: #000;
-  	color:#fff;
-  	opacity:.85;
+  	background-color: #fafafa;
+  	color:#2c3e50;
+  	opacity:1;
   }
 
 body {
@@ -36,9 +36,15 @@ body {
 }
 
 button {
-  background-color: #000;
-  border: 3px solid #19B5FE;
-  opacity:.85;
+  width: 90%;
+  height: 45px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #fff;
+  background-color: #e74c3c;
+  opacity:.9;
+  border-radius:5px;
+  border:none;
 }
 
 button a {
@@ -50,10 +56,18 @@ ul {
 }
 
 input {
-	background-color:#000;
+	/*background-color:#fff;*/
+  background-color:#e74c3c;
+  border:none;
+  color:#fff;
+  /*border: 1px solid #c0392b;*/
 }
 
-hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
+hr { 
+  display: block; 
+  height: 0px; 
+  border:0; 
+  border-top: 2px solid #c0392b;
    }
 
 
@@ -84,17 +98,20 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
  #app_name{
  	text-align: center;
  	margin-top:0;
+  padding:10px;
 	position:fixed;
 	left:0;
 	top:0;
-	width:95%;
+	width:100%;
   /*font-family: 'Varela Round', sans-serif;*/
  	font-family: 'Didact Gothic', sans-serif;
  	font-weight: 200;
-  	font-size: 75px;
+  font-size: 35px;
   /*color: #00059C;*/
-  	color:#19B5FE;
-  	opacity: .9;
+  	color:#FFF;
+  	/*opacity: 1;*/
+  height: 40px;
+  background-color:#c0392b;
  }
 
 
@@ -105,10 +122,10 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
 
 .centered {
 	position:fixed;
-	top:110px;
+	top:65px;
 	left:0px;
 	right:0px;
-	height:70%;
+	height:80%;
 	overflow-y:auto;
 	width:100%;
 	text-align: center;
@@ -127,9 +144,9 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
     bottom:0;
     left:0;
     width:100%;
-    background-color: #000;
-    opacity:.85;
-    border-top: 3px solid #19B5FE;
+    background-color:#c0392b;
+    opacity:1;
+    border-top: 3px solid #e74c3c;
 }
 .nav li{
 	height:100%;
@@ -142,7 +159,6 @@ hr { display: block; height: 0px; border:0; border-top: 2px solid #19B5FE;
     /*background-color:black;*/
     color:#fff;
     text-decoration: none;
-    
 }
 
 
@@ -193,17 +209,15 @@ inc_contact{
 	
 }
 
-/*div .meet :hover {
-	background-color:#333;
-	opacity:.9;
-}*/
 
 .meet {
-  /*background-color: #FFF;*/
+  background-color: #fff;
   clear:both;
-  min-width: 250px;
+  width: 90%;
   margin: 20px auto;
-  color:#fff;
+  color:#2c3e50;
+  border-radius:5px;
+  /*border:3px solid #95a5a6;*/
 }
 
 .meet a {
@@ -224,48 +238,72 @@ inc_contact{
 }
 
 #newmeet_link > button {
-  width: 240px;
+  width: 90%;
   height: 45px;
-  /*border-radius: 6px;*/
   margin-bottom: 10px;
   font-size: 20px;
   color: #fff;
-  background-color: #000;
+  background-color: #e74c3c;
   opacity:.9;
-  border: 3px solid #2ECC71;
+  border-radius:5px;
+  border:none;
+  /*border: 3px solid #c0392b;*/
 }
 
 .datetime{
+  width:50%;
 	position:relative;
 	float:left;
 	font-size:32px;
+  background-color:#fff; 
+  border-top-left-radius:5px;
 }
-.addressusers {
+.time{font-size:24px;}
+
+.users{
+  width:50%;
+  float:right;
+  background-color:#fff;
+}
+.address {
 	position:relative;
-	float:right;
+	clear:both;
 	font-size:22px;
-	width:150px;
+	width:100%;
+  background-color: #ecf0f1;
 }
 
 
 /*-----------Invites--------------*/
 
 #invites{
-	color:#fff;
+	color:#2c3e50;
 }
 
+.inv_buttons input[type="submit"]{
+  margin:0 auto;
+  width:25%;
+  height:30px;
+  /*padding:0;*/
+}
 .active {
-	font-size:20px;
-	border: 2px solid #19B5FE;
-	color: #19B5FE;
+	/*font-size:20px;*/
+	/*border: 2px solid #19B5FE;*/
+	color:#2c3e50;
+  background-color:#fff;
 }
 
-#outbtn {
 
+
+#incbtn{
+  margin:0;
+}
+#outbtn{
+  margin:0;
 }
 
 .inc_invite{
-	 clear:both;
+	clear:both;
   min-width: 250px;
   margin: 20px auto;
   color:#fff;
@@ -273,7 +311,7 @@ inc_contact{
 }
 
 .out_invite{
-	 clear:both;
+	clear:both;
   min-width: 250px;
   margin: 20px auto;
   color:#fff;
@@ -282,25 +320,30 @@ inc_contact{
 
 
 
-.s_inc_inv{
-	
-}
-
-.s_out_inv{
-
-}
-
 
 /*-----------Profile--------------*/
 
 
 #profile {
-	color:#fff;
+	color:#2c3e50;
 	font-size:20px;
 }
 
 .signout{
-	border: 2px solid #EF4836;
+  width: 90%;
+  height: 45px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #fff;
+  background-color: #e74c3c;
+  opacity:.9;
+  border-radius:5px;
+  border:none;
+}
+
+#addbio{
+  color:#fff;
+
 }
 
 
